correcciones en endpoint para crear reparaciones, arreglo estados, documentacion
